--- a/destacados.html
+++ b/destacados.html
@@ -9,17 +9,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="nav-links">
-          <a href="index.html">Inicio</a>
-          <span class="nav-separator">|</span>
-          <a href="taller.html">Taller</a>
-        </div>
+      <span class="namecam">Maria Camila Sayer Medina</span>
+        
         <div class="right-section">
-          <span>| Maria Camila Sayer</span>
+          
+          <div class="nav-links">
+            <a href="index.html">Inicio</a>
+            <span class="nav-separator">|</span>
+            <a href="taller.html">Taller</a>
+          </div>
           <img class="logo" src="infologo/cam.webp" alt="">
         </div>
       </nav>
@@ -127,6 +132,11 @@
     display: flex;
     gap: 20px;
     align-items: center;
+  }
+
+  .namecam {
+    font-family: "EB Garamond";
+    font-size: 100%;
   }
 
   .nav-separator {
