--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <body>
   <nav class="navbar">
     <div class="nav-links">
-      <a href="taller.html">Taller</a>
+      <a href="index.html">Inicio</a>
       <span class="nav-separator">|</span>
-      <a href="destacados.html">Destacados</a>
+      <a href="taller.html">Taller</a>
     </div>
-    <div class="right-section">
-      <span>| Maria Camila Sayer</span>
-      <img class="logo" src="infologo/cam.webp" alt="">
-    </div>
+    
+      <div class="right-section">
+        <span class="namecam" data-full="Diseño Digital y Multimedia">D D M</span>
+        <span class="nav-separator">|</span>
+        <img class="logo" src="infologo/cam.webp" alt="">
+        <span class="nombrecam" data-full="María Camila Sáyer Medina">María</span>
+      </div>
   </nav>
   <br>
   <br>
@@ -37,7 +40,7 @@
     <div class="info-text">
       <p>Nombre: maría camila sáyer medina</p>
       <br>
-      <p>Ocupación: Diseñador Web</p>
+      <p>Ocupación: Diseñadora Digital y Multimedia</p>
       <br>
       <p>Ubicación: Bogotá, Colombia</p>
       <br>
@@ -119,7 +122,7 @@
     padding: 10px 20px;
     background-color: #333;
     color: #ffffff;
-    overflow-x: auto;
+    overflow-x: hidden;
     white-space: nowrap;
   }
   .nav-links {
@@ -127,6 +130,134 @@
     gap: 20px;
     align-items: center;
   }
+
+  .nombrecam{
+    font-family: 'Work Sans';
+  }
+
+  .nombrecam {
+      display: inline-block;
+      position: relative;
+      padding: 0.2em 0.6em;
+      background: #333;
+      color: #fff;
+      font-family: sans-serif;
+      font-weight: bold;
+      border-radius: 0.25em;
+      white-space: nowrap;
+      cursor: default;
+      width: 3.2em;
+      transition: width 0.5s ease, background 0.3s ease;
+      overflow: visible; /* que deje ver el ::after */
+    }
+
+    .nombrecam::after {
+      content: attr(data-full);
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 0.2em 0.6em;
+      opacity: 0;
+      transform: translateX(-10px);
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      z-index: 2;         /* encima de todo */
+      pointer-events: none;
+      color: #fff;
+    }
+
+    .nombrecam:hover {
+  width: 14em;
+  background: #444;
+  color: transparent;      /* ocultamos el texto original */
+}
+
+.nombrecam:hover::after {
+  opacity: 1;
+  transform: translateX(0);
+  /* z-index ya lo teníamos en 2 */
+}
+
+  .namecam {
+      display: inline-block;
+      position: relative;
+      padding: 0.2em 0.6em;
+      background: #333;
+      color: #fff;
+      font-family: sans-serif;
+      font-weight: bold;
+      border-radius: 0.25em;
+      white-space: nowrap;
+      cursor: default;
+      width: 3.2em;
+      transition: width 0.5s ease, background 0.3s ease;
+      overflow: visible; /* que deje ver el ::after */
+    }
+
+    .namecam::after {
+      content: attr(data-full);
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 0.2em 0.6em;
+      opacity: 0;
+      transform: translateX(-10px);
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      z-index: 2;         /* encima de todo */
+      pointer-events: none;
+      color: #fff;
+    }
+
+    .namecam:hover {
+  width: 14em;
+  background: #444;
+  color: transparent;      /* ocultamos el texto original */
+}
+
+.namecam:hover::after {
+  opacity: 1;
+  transform: translateX(0);
+  /* z-index ya lo teníamos en 2 */
+}
+
+  .nav-separator {
+      color: #ffffff;
+      font-size: 1.2rem;
+      opacity: 0.6;
+      user-select: none;
+    }
+
+    .nav-links a {
+  color: #ffffff;
+  text-decoration: none;
+  position: relative;
+  padding: 8px 16px;
+  font-weight: 500;
+  border-radius: 6px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.nav-links a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 4px;
+  width: 100%;
+  height: 2px;
+  background-color: #ffffff;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.3s ease;
+}
+
+.nav-links a:hover {
+  background-color: #555;
+  color: #fff;
+}
+
+.nav-links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
 
   .nav-separator {
       color: #ffffff;
@@ -255,7 +386,7 @@
     }
 
     .info-text {
-      width: 50%;
+      width: 57%;
       padding: 120px 150px;
       display: flex;
       flex-direction: column;
