Perfil profecional, descripcion Extrusión

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar">
     <div class="nav-links">
-      <a href="index.html">Inicio</a>
+      <a href="destacados.html">Descados</a>
       <span class="nav-separator">|</span>
       <a href="taller.html">Taller</a>
     </div>
@@ -38,13 +38,10 @@
   <div id="personal-info" class="personal-info-layout">
     <img src="infologo/cam.webp" alt="Foto de perfil" class="profile-pic">
     <div class="info-text">
-      <p>Nombre: maría camila sáyer medina</p>
+      
+      <p><span style="text-decoration: underline;">Estudiante de Diseño Digital y Multimedia</span> en formación, con <span style="text-decoration: underline;">técnico en diseño e integracion de multimedia</span>, con experiencia en herramientas como Photoshop 2024, Krita 5.2.2 e Illustrator, aplicadas en proyectos que combinan ilustración, edición y composición digital. Ha desarrollado un estilo propio mediante la práctica constante y la experimentación visual.</p>
       <br>
-      <p>Ocupación: Diseñadora Digital y Multimedia</p>
-      <br>
-      <p>Ubicación: Bogotá, Colombia</p>
-      <br>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam odit facere molestias odio accusantium, corporis magni dignissimos reiciendis quas, ullam perferendis nulla doloremque quisquam, error praesentium libero! Fugit, iste unde?</p>
+      <p>Con conocimientos de HTML y CSS, utiliza Visual Studio Code para estructurar y explorar principios fundamentales del diseño web. Demuestra responsabilidad, proactividad y capacidad para el trabajo en equipo, aportando creatividad y entusiasmo en cada proyecto.</p>
     </div>
   </div>
 
