--- a/taller.html
+++ b/taller.html
@@ -17,7 +17,7 @@
       <div class="nav-links">
         <a href="index.html">Inicio</a>
         <span class="nav-separator">|</span>
-        <a href="taller.html">Taller</a>
+        <a href="destacados.html">Destacados</a>
       </div>
       
         <div class="right-section">
@@ -41,7 +41,7 @@
       </section>
 
       <hr>
-      <section id="semestreI" class="section gallery-section">
+      <section id="semestreI" class="section4 gallery-section">
         <div class="image">
           <img src="semestre1/Armonías cromáticas.webp" loading="lazy">
       </div>
@@ -74,7 +74,7 @@
 
       <hr>
 
-      <section id="semestreI" class="section gallery-section">
+      <section id="semestreI" class="section4 gallery-section">
         <div class="image">
           <img src="semestre2_procesos/Extrusión/2da (principal).webp" loading="lazy">
       </div>
@@ -82,14 +82,27 @@
         <h1>Extrusión (2025)</h1>
         <br>
         <br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?</p>
+        <p>Maqueta modular en papel normalizado para explorar volúmenes y niveles. Cajas diferenciadas por temperatura, con tapas superiores en tonos cálidos (excepto nivel 0) y acabado estucado.</p>
         <br>
         <h3>Proceso</h3>
-        <div class="galeria-mini">
+        <div class="galeria-mini4">
         <img src="semestre2_procesos/Extrusión/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
         <img src="semestre2_procesos/Extrusión/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
         <img src="semestre2_procesos/Extrusión/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
         <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 10">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 11">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 12">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 13">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 14">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 15">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 16">
+        
         </div>
        </div>
       </section>
@@ -126,7 +139,7 @@
 
       <hr>
 
-      <section id="semestreI" class="section gallery-section">
+      <section id="semestreI" class="section4 gallery-section">
         <div class="image">
           <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).webp" loading="lazy">
       </div>
@@ -137,7 +150,7 @@
         <p>Maqueta tridimensional que recrea el triángulo imposible utilizando perspectiva forzada. El modelo juega con la percepción visual para simular una figura continua e irreal desde un ángulo específico.</p>
         <br>
         <h3>Proceso</h3>
-        <div class="galeria-mini">
+        <div class="galeria-mini3">
         <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" loading="lazy" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
         <img src="semestre2_procesos/Triángulo de penrose/2do.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 2">
         <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 3">
@@ -147,7 +160,7 @@
       </section>
 
       <hr>
-      <section id="semestreI" class="section2 gallery-section">
+      <section id="semestreI" class="section3 gallery-section">
         <div class="image">
           <img src="semestre2/Icosaedro truncado.webp" loading="lazy">
       </div>
@@ -514,6 +527,15 @@
       padding: 200px 0px 250px 0px;
     }
 
+    .section4 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 200px 0px 250px 0px;
+    }
+
     .tittle p{
       padding: 0% 5% 0% 0%;      
     }
@@ -540,6 +562,7 @@
   display: block;
 }
 
+
 .galeria-mini2 {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
@@ -565,6 +588,22 @@
 }
 
 .galeria-mini3 img {
+  width: 100%;
+  height: 80px; /* Ajusta según el tamaño que te parezca bien */
+  object-fit: cover; /* Recorta la imagen manteniendo el encuadre */
+  border-radius: 4px;
+  display: block;
+}
+
+.galeria-mini4 {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
+  margin: 20px auto 0 auto; /* ← esto centra horizontalmente */
+  max-width: 80%;            /* ← puedes ajustar a 60%, 70% según lo que quieras */
+}
+
+.galeria-mini4 img {
   width: 100%;
   height: 80px; /* Ajusta según el tamaño que te parezca bien */
   object-fit: cover; /* Recorta la imagen manteniendo el encuadre */
@@ -797,7 +836,7 @@ const imagenModal = document.getElementById("imagenModal");
 const descripcionModal = document.getElementById("descripcionModal");
 const cerrar = document.getElementById("cerrarModal");
 
-document.querySelectorAll(".galeria-mini img, .image img, .galeria-mini2 img, .galeria-mini3 img").forEach(img => {
+document.querySelectorAll(".galeria-mini img, .image img, .galeria-mini2 img, .galeria-mini3 img, .galeria-mini4 img").forEach(img => {
   img.addEventListener("click", () => {
     imagenModal.src = img.src;
     descripcionModal.textContent = img.getAttribute("data-descripcion") || "";
