--- a/taller.html
+++ b/taller.html
@@ -141,7 +141,7 @@
 
       <section id="semestreI" class="section4 gallery-section">
         <div class="image">
-          <img src="semestre2_procesos/Triángulo de penrose/5ta (principal).webp" loading="lazy">
+          <img src="semestre2_procesos/Triángulo de penrose/(principal).webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Triángulo de penrose (2025)</h1>
@@ -152,9 +152,12 @@
         <h3>Proceso</h3>
         <div class="galeria-mini3">
         <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" loading="lazy" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
-        <img src="semestre2_procesos/Triángulo de penrose/2do.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 2">
+        <img src="semestre2_procesos/Triángulo de penrose/2da.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 2">
         <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 3">
-        <img src="semestre2_procesos/Triángulo de penrose/4ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 4">
+        <img src="semestre2_procesos/Triángulo de penrose/4to.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 4">
+        <img src="semestre2_procesos/Triángulo de penrose/5ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 5">
+        <img src="semestre2_procesos/Triángulo de penrose/6ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 6">
+        <img src="semestre2_procesos/Triángulo de penrose/7ma.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 7">
         </div>
        </div>
       </section>
