--- a/taller.html
+++ b/taller.html
@@ -183,6 +183,7 @@
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
         <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/9na.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
         </div>
        </div>
       </section>
@@ -584,7 +585,7 @@
 
 .galeria-mini3 {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 10px;
   margin: 20px auto 0 auto; /* ← esto centra horizontalmente */
   max-width: 80%;            /* ← puedes ajustar a 60%, 70% según lo que quieras */
