--- a/taller.html
+++ b/taller.html
@@ -86,23 +86,11 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini4">
-        <img src="semestre2_procesos/Extrusión/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Extrusión/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Extrusión/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 10">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 11">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 12">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 13">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 14">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 15">
-        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 16">
-        
+        <img src="semestre2_procesos/Extrusión/1ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Extrusión/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Extrusión/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+       
         </div>
        </div>
       </section>
@@ -122,17 +110,17 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini2">
-        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
-        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
-        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
-        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
-        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
-        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
-        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 10">
-        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 11">
+        <img src="semestre2_procesos/Cubo Cromatico/1ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Cubo Cromatico/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Cubo Cromatico/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Cubo Cromatico/4ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Cubo Cromatico/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Cubo Cromatico/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Cubo Cromatico/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Cubo Cromatico/8va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Cubo Cromatico/9na.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        <img src="semestre2_procesos/Cubo Cromatico/10ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
+        <img src="semestre2_procesos/Cubo Cromatico/11va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
         </div>
        </div>
       </section>
@@ -151,13 +139,13 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini3">
-        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" loading="lazy" data-descripcion="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad mollitia nam repellendus quasi dignissimos qui dolorem voluptas nesciunt! Dicta, consectetur rem recusandae incidunt sunt delectus repellendus quam praesentium soluta impedit?" alt="Mini 1">
-        <img src="semestre2_procesos/Triángulo de penrose/2da.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 2">
-        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 3">
-        <img src="semestre2_procesos/Triángulo de penrose/4to.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 4">
-        <img src="semestre2_procesos/Triángulo de penrose/5ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 5">
-        <img src="semestre2_procesos/Triángulo de penrose/6ta.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 6">
-        <img src="semestre2_procesos/Triángulo de penrose/7ma.webp" loading="lazy" data-descripcion="Esta es la imagen 1" alt="Mini 7">
+        <img src="semestre2_procesos/Triángulo de penrose/1ro.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Triángulo de penrose/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Triángulo de penrose/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Triángulo de penrose/4to.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Triángulo de penrose/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Triángulo de penrose/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Triángulo de penrose/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
         </div>
        </div>
       </section>
@@ -175,15 +163,15 @@
         <br>
         <h3>Proceso</h3>
         <div class="galeria-mini3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 1">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 2">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 3">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 4">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 5">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 6">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 7">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 8">
-        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/9na.webp" loading="lazy" data-descripcion="Texto de prueba" alt="Mini 9">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/1ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/4ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/8va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Icosaedro truncado_Kirigami/9na.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
         </div>
        </div>
       </section>
@@ -601,7 +589,7 @@
 
 .galeria-mini4 {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 10px;
   margin: 20px auto 0 auto; /* ← esto centra horizontalmente */
   max-width: 80%;            /* ← puedes ajustar a 60%, 70% según lo que quieras */
