--- a/taller.html
+++ b/taller.html
@@ -129,7 +129,7 @@
 
       <section id="semestreI" class="section4 gallery-section">
         <div class="image">
-          <img src="semestre2_procesos/Triángulo de penrose/(principal).webp" loading="lazy">
+          <img src="semestre2/Triangulo de penrose.webp" loading="lazy">
       </div>
         <div class="tittle">
         <h1>Triángulo de penrose (2025)</h1>
@@ -146,6 +146,13 @@
         <img src="semestre2_procesos/Triángulo de penrose/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
         <img src="semestre2_procesos/Triángulo de penrose/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
         <img src="semestre2_procesos/Triángulo de penrose/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Triángulo de penrose/8va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Triángulo de penrose/9na.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        <img src="semestre2_procesos/Triángulo de penrose/10ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
+        <img src="semestre2_procesos/Triángulo de penrose/11va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
+        <img src="semestre2_procesos/Triángulo de penrose/12va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 12">
+        <img src="semestre2_procesos/Triángulo de penrose/13va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 13">
+
         </div>
        </div>
       </section>
@@ -189,10 +196,52 @@
         <br>
         <p>Elección personal del personaje Manny de la película Bichos de Disney Pixar</p>
         <br>
+        <h3>Proceso</h3>
+        <div class="galeria-mini3">
+        <img src="semestre2_procesos/Bicho/1ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Bicho/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Bicho/3ra.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Bicho/4ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Bicho/5ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Bicho/6ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Bicho/7ma.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Bicho/8va.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Bicho/9na.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        
+        </div>
        </div>
       </section>
 
       <hr>
+
+      <section id="semestreI" class="section2 gallery-section">
+        <div class="image">
+          <img src="semestre2_procesos/Escenario bicho/(Principal).webp" loading="lazy">
+      </div>
+        <div class="tittle">
+        <h1>Escenario "Bichos" (2025)</h1>
+        <br>
+        <br>
+        <p>Maqueta tridimensional con profundidad hecha a partir de un punto de fuga exagerado, teniendo en cuenta Primer plano para el personaje, Segundo plano para el acompañamiento y el Tercer plano como paisaje.</p>
+        <br>
+        <div class="galeria-mini3">
+        <img src="semestre2_procesos/Escenario bicho/1ra.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Escenario bicho/2da.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Escenario bicho/3ra.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Escenario bicho/4ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Escenario bicho/5ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Escenario bicho/6ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Escenario bicho/7ma.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Escenario bicho/8va.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Escenario bicho/9na.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        <img src="semestre2_procesos/Escenario bicho/10ma.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
+        <img src="semestre2_procesos/Escenario bicho/11va.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
+
+        </div>
+       </div>
+      </section>
+
+      <hr>      
 
       <section class="encabezado-seccion">
       <center><h2 class="titulo">ILUSTRACION DIGITAL</h2></center>
