--- a/taller.html
+++ b/taller.html
@@ -152,6 +152,12 @@
         <img src="semestre2_procesos/Triángulo de penrose/11va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
         <img src="semestre2_procesos/Triángulo de penrose/12va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 12">
         <img src="semestre2_procesos/Triángulo de penrose/13va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 13">
+        <img src="semestre2_procesos/Triángulo de penrose/14va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 14">
+        <img src="semestre2_procesos/Triángulo de penrose/15va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 15">
+        <img src="semestre2_procesos/Triángulo de penrose/16vo.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 16">
+        <img src="semestre2_procesos/Triángulo de penrose/17va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 17">
+        <img src="semestre2_procesos/Triángulo de penrose/18vo.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 18">
+        <img src="semestre2_procesos/Triángulo de penrose/19va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 19">
 
         </div>
        </div>
@@ -622,7 +628,7 @@
 
 .galeria-mini3 {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   gap: 10px;
   margin: 20px auto 0 auto; /* ← esto centra horizontalmente */
   max-width: 80%;            /* ← puedes ajustar a 60%, 70% según lo que quieras */
