--- a/taller.html
+++ b/taller.html
@@ -784,6 +784,15 @@
       padding: 250px 0px 300px 0px;
     }
 
+    .section4 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 50vh;
+      padding: 250px 0px 320px 0px;
+    }
+
       footer {
       display: flex;
       justify-content: center;
