--- a/taller.html
+++ b/taller.html
@@ -90,7 +90,13 @@
         <img src="semestre2_procesos/Extrusión/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
         <img src="semestre2_procesos/Extrusión/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
         <img src="semestre2_procesos/Extrusión/4ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
-       
+        <img src="semestre2_procesos/Extrusión/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Extrusión/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Extrusión/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Extrusión/8va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Extrusión/9ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        <img src="semestre2_procesos/Extrusión/10ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
+        <img src="semestre2_procesos/Extrusión/11va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
         </div>
        </div>
       </section>
