--- a/taller.html
+++ b/taller.html
@@ -237,17 +237,19 @@
         <p>Maqueta tridimensional con profundidad hecha a partir de un punto de fuga exagerado, teniendo en cuenta Primer plano para el personaje, Segundo plano para el acompañamiento y el Tercer plano como paisaje.</p>
         <br>
         <div class="galeria-mini3">
-        <img src="semestre2_procesos/Escenario bicho/1ra.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
-        <img src="semestre2_procesos/Escenario bicho/2da.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
-        <img src="semestre2_procesos/Escenario bicho/3ra.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
-        <img src="semestre2_procesos/Escenario bicho/4ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
-        <img src="semestre2_procesos/Escenario bicho/5ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
-        <img src="semestre2_procesos/Escenario bicho/6ta.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
-        <img src="semestre2_procesos/Escenario bicho/7ma.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
-        <img src="semestre2_procesos/Escenario bicho/8va.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
-        <img src="semestre2_procesos/Escenario bicho/9na.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
-        <img src="semestre2_procesos/Escenario bicho/10ma.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
-        <img src="semestre2_procesos/Escenario bicho/11va.jpg" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
+        <img src="semestre2_procesos/Escenario bicho/1ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 1">
+        <img src="semestre2_procesos/Escenario bicho/2da.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 2">
+        <img src="semestre2_procesos/Escenario bicho/3ra.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 3">
+        <img src="semestre2_procesos/Escenario bicho/4ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 4">
+        <img src="semestre2_procesos/Escenario bicho/5ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 5">
+        <img src="semestre2_procesos/Escenario bicho/6ta.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 6">
+        <img src="semestre2_procesos/Escenario bicho/7ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 7">
+        <img src="semestre2_procesos/Escenario bicho/8va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 8">
+        <img src="semestre2_procesos/Escenario bicho/9na.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 9">
+        <img src="semestre2_procesos/Escenario bicho/10ma.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 10">
+        <img src="semestre2_procesos/Escenario bicho/11va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 11">
+        <img src="semestre2_procesos/Escenario bicho/12va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 12">
+        <img src="semestre2_procesos/Escenario bicho/13va.webp" loading="lazy" data-descripcion="Aca va Descripcion" alt="Mini 13">
 
         </div>
        </div>
