--- a/taller.html
+++ b/taller.html
@@ -257,6 +257,26 @@
 
       <hr>      
 
+       <section>
+
+        <div>
+          <center>
+        <h2>Portfolio Delivery (pitch)</h2>
+        </center>
+        <br>
+      
+       </div>
+
+       <center>
+
+       <iframe class="iutu" width="854" height="480" src="https://www.youtube.com/embed/wU6RvwDixUw?si=9G90mHK4nAYXstoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+      </center>
+
+      </section>
+
+      <hr>
+
       <section class="encabezado-seccion">
       <center><h2 class="titulo">ILUSTRACION DIGITAL</h2></center>
       </section>
@@ -555,6 +575,11 @@
   margin-top: -50px;
 }
     
+    .iutu {
+      margin-top: 25px;
+      margin-bottom: 50px;
+    }
+
     .section {
       display: flex;
       align-items: center;
