--- a/taller.html
+++ b/taller.html
@@ -267,11 +267,16 @@
       
        </div>
 
+       <div class="video-wrapper">
+
+       <div class="video-container">
+
        <center>
-
        <iframe class="iutu" width="854" height="480" src="https://www.youtube.com/embed/wU6RvwDixUw?si=9G90mHK4nAYXstoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
       </center>
+
+      </div>
+      </div>
 
       </section>
 
@@ -574,10 +579,31 @@
   padding: 40px 0px 0px 0px;
   margin-top: -50px;
 }
+
+.video-wrapper {
+      max-width: 600px;      /* Ancho máximo del video */
+      margin: 40px auto;     /* Margen superior/inferior y centrado horizontal */
+      padding: 20px;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+    }
     
-    .iutu {
-      margin-top: 25px;
-      margin-bottom: 50px;
+   .video-container {
+      position: relative;
+      padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+      height: 0;
+      overflow: hidden;
+      border-radius: 8px;
+    }
+
+    .video-container iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
     }
 
     .section {
